[build-system]
requires = [
    "setuptools >= 44.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "D100",  # Missing docstring in public module.
    "D101",  # Missing docstring in public class.
    "D102",  # Missing docstring in public method.
    "D103",  # Missing docstring in public function.
    "D105",  # Missing docstring in magic method.
    "D106",  # Missing docstring in public nested class.
    "D107",  # Missing docstring in __init__.
    "D200",  # One-line docstring should fit on one line.
    "D202",  # No blank lines allowed after function docstring.
    "D203",  # 1 blank line required before class docstring.
    "D205",  # 1 blank line required between summary line and description.
    "D211",  # No blank lines allowed before class docstring.
    "D212",  # Multi-line docstring summary should start at the first line.
    "D213",  # Multi-line docstring summary should start at the second line.
]
