[build-system]
requires = ["setuptools >= 44.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "W",    # pycodestyle
    "E",    # pycodestyle
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "YTT",  # flake8-2020
    "BLE",  # flake8-blind-except
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "T10",  # flake8-debugger
    "EXE",  # flake8-executable
    "INT",  # flake8-gettext
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "INP",  # flake8-no-pep420
    "T20",  # flake8-print
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "PGH",  # pygrep-hooks
    "PL",   # Pylint
    "UP",   # pyupgrade
    # TODO: "B",   # flake8-bugbear
    # TODO: "C4",  # flake8-comprehensions
    # TODO: "EM",  # flake8-errmsg
    # TODO: "G",   # flake8-logging-format
    # TODO: "PIE", # flake8-pie
    # TODO: "PYI", # flake8-pyi
    # TODO: "RET", # flake8-return
    # TODO: "SIM", # flake8-simplify
    # TODO: "ARG", # flake8-unused-arguments
    # TODO: "PTH", # flake8-use-pathlib
    # TODO: "ERA", # eradicate
    # TODO: "RUF", # Ruff-specific rules
]
ignore = [
    "D100",    # Missing docstring in public module.
    "D101",    # Missing docstring in public class.
    "D102",    # Missing docstring in public method.
    "D103",    # Missing docstring in public function.
    "D105",    # Missing docstring in magic method.
    "D106",    # Missing docstring in public nested class.
    "D107",    # Missing docstring in __init__.
    "D200",    # One-line docstring should fit on one line.
    "D202",    # No blank lines allowed after function docstring.
    "D203",    # 1 blank line required before class docstring.
    "D205",    # 1 blank line required between summary line and description.
    "D212",    # Multi-line docstring summary should start at the first line.
    "D213",    # Multi-line docstring summary should start at the second line.
    "COM812",  # Missing trailing comma.
    "ISC001",  # single-line-implicit-string-concatenation, conflicts with Ruff formatter.
    "PLR0912", # Too many branches.
    "PLR0913", # Too many arguments in function definition.
    "PLR0915", # Too many statements.
]

[tool.ruff.lint.isort]
known-first-party = ["kerko"]
