[metadata]
name = Kerko
version = 0.7.dev
author = David Lesieur
author_email = kerko@whiskyechobravo.com
license_file = LICENSE.txt
url = https://github.com/whiskyechobravo/kerko
project_urls =
    Documentation = https://github.com/whiskyechobravo/kerko
    Code = https://github.com/whiskyechobravo/kerko
    Issue tracker = https://github.com/whiskyechobravo/kerko/issues
description = A Flask blueprint that provides a faceted search interface for bibliographies based on Zotero.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = academia, bibliography, bibliographies, flask, search, zotero
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Database :: Front-Ends
    Topic :: Education
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = kerko
python_requires = >=3.6
install_requires =
    Babel>=2.6.0
    Bootstrap-Flask>=1.0.10
    Flask>=1.0.2
    Flask-BabelEx>=0.9.3
    Flask-WTF>=0.14.2
    Jinja2>=2.10.1
    Pyzotero>=1.4.1
    Werkzeug>=0.15.3
    Whoosh>=2.7.4
    wrapt>=1.10.0
    WTForms>=2.2
setup_requires =
    Babel>=2.6.0  # For compiling catalog.
    wheel
include_package_data = True

[options.extras_require]
tests = tox>=3

[options.entry_points]
flask.commands =
    kerko = kerko.cli:cli

[aliases]
dist = sdist bdist_wheel


# Babel options (to simplify commandline use).
# Reference: http://babel.pocoo.org/en/latest/setup.html

[extract_messages]
mapping_file = babel.cfg
output_file = kerko/translations/kerko.pot
copyright_holder = Kerko Contributors

[init_catalog]
input_file = kerko/translations/kerko.pot
output_dir = kerko/translations/
domain = kerko

[update_catalog]
input_file = kerko/translations/kerko.pot
output_dir = kerko/translations/
domain = kerko
update_header_comment = 1

[compile_catalog]
directory = kerko/translations/
domain = kerko
statistics = 1


# Yapf options.
# TODO: Move to pyproject.toml when possible. https://github.com/google/yapf/issues/708

[yapf]
based_on_style = facebook
column_limit = 100
