[metadata]
name = Kerko
version = 0.8.1
author = David Lesieur
author_email = kerko@whiskyechobravo.com
license_file = LICENSE.txt
url = https://github.com/whiskyechobravo/kerko
project_urls =
    Documentation = https://github.com/whiskyechobravo/kerko
    Code = https://github.com/whiskyechobravo/kerko
    Changes = https://github.com/whiskyechobravo/kerko/blob/master/CHANGELOG.md
    Issue tracker = https://github.com/whiskyechobravo/kerko/issues
description = A Flask blueprint that provides a faceted search interface for bibliographies based on Zotero.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = academia, bibliography, bibliographies, flask, search, zotero
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database :: Front-Ends
    Topic :: Education
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = =src
python_requires = >=3.7
install_requires =
    Babel >=2.6.0
    Bootstrap-Flask >=1.0.10, <2.0
    click >=8.0.1
    Flask >=2.0.1
    Flask-Babel >=2.0.0
    Flask-WTF >=0.14.2
    Jinja2 >=3.0.1, <3.1
    Pyzotero >=1.4.26
    w3lib >=1.22.0
    Werkzeug >=2.0.1
    Whoosh >=2.7.4
    wrapt >=1.10.0
    WTForms >=2.2, <3.0
include_package_data = True
setup_requires =
    Babel >=2.6.0  # For compiling catalog.
    wheel

[options.packages.find]
where=src

[options.extras_require]
tests =
    coverage >=6.1.2, <6.4
    elementpath >=2.4.0, <3
    lxml >=4.6.4, <5
    responses >=0.15.0, <0.18
    tox >=3.8, <4
dev =
    pip-tools >=5.5.0
    pycodestyle
    pydocstyle >=6.1.0
    pylint >=2.5.0
    rope
    yapf

[options.entry_points]
flask.commands =
    kerko = kerko.cli:cli

[aliases]
dist = sdist bdist_wheel

[coverage:run]
branch = true
source =
    kerko

[coverage:paths]
source =
    src
    .tox/*/site-packages


# Babel options (to simplify commandline use).
# Reference: http://babel.pocoo.org/en/latest/setup.html

[extract_messages]
mapping_file = babel.cfg
input_paths = src/kerko
output_file = src/kerko/translations/kerko.pot
copyright_holder = Kerko Contributors

[init_catalog]
input_file = src/kerko/translations/kerko.pot
output_dir = src/kerko/translations/
domain = kerko

[update_catalog]
input_file = src/kerko/translations/kerko.pot
output_dir = src/kerko/translations/
domain = kerko
update_header_comment = 1

[compile_catalog]
directory = src/kerko/translations/
domain = kerko
statistics = 1


# Yapf options.
# TODO: Move to pyproject.toml when possible. https://github.com/google/yapf/issues/708

[yapf]
based_on_style = facebook
column_limit = 100
