[metadata]
name = Kerko
version = 1.1.0
author = David Lesieur
author_email = kerko@whiskyechobravo.com
license_files = LICENSE.txt
url = https://whiskyechobravo.github.io/kerko/
project_urls =
    Documentation = https://whiskyechobravo.github.io/kerko/
    Code = https://github.com/whiskyechobravo/kerko
    Changes = https://github.com/whiskyechobravo/kerko/blob/main/CHANGELOG.md
    Issue tracker = https://github.com/whiskyechobravo/kerko/issues
description = A Flask blueprint that provides a faceted search interface for bibliographies based on Zotero.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = academia, bibliography, bibliographies, flask, search, zotero
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Database :: Front-Ends
    Topic :: Education
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find_namespace:
package_dir = =src
python_requires = >=3.8
install_requires =
    Babel >=2.6.0
    Bootstrap-Flask >=2.0.1
    click >=8.0.1
    dpath >=2.1.0
    Flask >=2.2.5
    Flask-Babel >=3.0.1
    Flask-WTF >=0.14.2
    Jinja2 >=3.0.1
    pycountry >=24
    pydantic >=1.10.7, <2.0
    python-dotenv >=0.21.1
    pytz  # Babel does not require it (since 2.12.0), but will use it if present.
    Pyzotero >=1.4.26
    tomli >=2.0.1
    tomli-w >=1.0.0
    w3lib >=1.22.0
    Werkzeug >=2.0.1
    Whoosh >=2.7.4
    wrapt >=1.10.0
    WTForms >=3.0.0
include_package_data = True
setup_requires =
    Babel >=2.6.0  # For compiling catalog.
    wheel >=0.38.1

[options.packages.find]
where=src

[options.extras_require]
tests =
    coverage >=6.1.2, <8
    elementpath >=2.4.0, <5
    lxml >=4.9.3, <5
    responses >=0.17.0
    tox >=3.8, <5
dev =
    mypy >=0.910
    pip-tools >=5.5.0
    pre-commit >=3.5.0
    rope
    ruff >=0.1.3
docs =
    mkdocs-material >=9.4, <10
    mike >=1.1.2, <3

[options.entry_points]
flask.commands =
    kerko = kerko.cli:cli

[aliases]
dist = sdist bdist_wheel

[coverage:run]
branch = true
source =
    kerko

[coverage:paths]
source =
    src
    .tox/*/site-packages


# Babel options (to simplify commandline use).
# Reference: http://babel.pocoo.org/en/latest/setup.html

[extract_messages]
mapping_file = babel.cfg
input_paths = src/kerko
output_file = src/kerko/translations/kerko.pot
copyright_holder = Kerko Contributors

[init_catalog]
input_file = src/kerko/translations/kerko.pot
output_dir = src/kerko/translations/
domain = kerko

[update_catalog]
input_file = src/kerko/translations/kerko.pot
output_dir = src/kerko/translations/
domain = kerko
update_header_comment = 1

[compile_catalog]
directory = src/kerko/translations/
domain = kerko
statistics = 1

# Pydantic plugin for mypy

[mypy]
plugins = pydantic.mypy
